--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,17 +6,13 @@ package:
   version: {{ version }}
 
 source:
-  - url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-    sha256: 7fa74661246e826ef939ee92e768f698df167a7617361ab399901eaebf80dce6
-    folder: dist
-  - url: https://github.com/graphql-python/{{ name }}-py/archive/v{{ version }}.tar.gz
-    sha256: 87164f7997ce9c1e8492730683f649d76a01f150706711bafe935e14941217a7
-    folder: src
+  url: https://github.com/graphql-python/{{ name }}-py/archive/v{{ version }}.tar.gz
+  sha256: 87164f7997ce9c1e8492730683f649d76a01f150706711bafe935e14941217a7
 
 build:
   noarch: python
   number: 0
-  script: cd dist && {{ PYTHON }} -m pip install --no-deps .
+  script: {{ PYTHON }} -m pip install -vv .
 
 requirements:
   host:
@@ -29,21 +25,16 @@ requirements:
     - promise >=2.2,<3
 
 test:
-  source_files:
-    - src/tests
   requires:
     - pytest-cov
   imports:
     - graphql_relay
-    - graphql_relay.connection
-    - graphql_relay.mutation
-    - graphql_relay.node
   commands:
-    - cd src && pytest --cov graphql_relay
+    - pytest --pyargs graphql_relay --cov graphql_relay
 
 about:
   home: https://github.com/graphql-python/graphql-relay-py
-  license_file: dist/LICENSE
+  license_file: LICENSE
   license: MIT
   license_family: MIT
   summary: 'Relay implementation for Python'
