--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,30 +1,27 @@
-{% set name = "graphql-relay" %}
 {% set version = "3.1.1" %}
 
 package:
-  name: {{ name }}
+  name: graphql-relay
   version: {{ version }}
 
 source:
-  url: https://github.com/graphql-python/{{ name }}-py/archive/v{{ version }}.tar.gz
-  sha256: 2eb409908aa077cf50638ba9d9b36faa74cdc0cd304196e2cee3f6ff1a01835b
+  url: https://pypi.io/packages/source/g/graphql-relay/graphql-relay-{{ version }}.tar.gz
+  sha256: 0f96492c11482f9d9be7723af6b52184456388855af7d75f429696d8e9ddd1dc 
 
 build:
   noarch: python
   number: 0
-  script:
-    - python -c '__import__("os").unlink("pyproject.toml")'
-    - {{ PYTHON }} -m pip install -vv .
+  script: {{ PYTHON }} -m pip install -vv .
 
 requirements:
   host:
     - pip
-    - python >=3.6,<4.0.0a0
+    - python >=3.6
     - poetry-core >=1,<2
   run:
-    - python >=3.6,<4.0.0a0
-    - graphql-core >=3.1,<4
-    - typing_extensions >=3.6.2,<4
+    - python >=3.6
+    - graphql-core >=3.1,<3.2
+    - typing_extensions >=4,<5
 
 test:
   source_files:
@@ -40,7 +37,7 @@ test:
     - graphql_relay
   commands:
     - pip check
-    - pytest --cov graphql_relay --no-cov-on-fail --cov-fail-under 91 --cov-report term-missing:skip-covered
+    - pytest --cov graphql_relay --no-cov-on-fail --cov-report term-missing:skip-covered --cov-fail-under 91
 
 about:
   home: https://github.com/graphql-python/graphql-relay-py
